--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+/*Capstone 1 CSS*/
+
 /*font families
 
 font-family: 'Bangers', cursive;
@@ -14,12 +16,12 @@ font-family: 'Shrikhand', cursive;
 font-family: 'Sorts Mill Goudy', serif;
 
 */
-
 /*CSS Reset*/
 * {
 	padding: 0rem;
 	margin: 0rem;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 
 /*fonts*/
@@ -29,17 +31,26 @@ body {
 
 }
 
-h1, h2, h3{
+h1, h2{
 	font-family: 'Racing Sans One', cursive;
 }
 
-h1 span {
-	color: sandybrown;
+h4 {
+	font-weight: bold;
 }
 
-a:hover {
-	text-decoration: none;
+h3{
+	/*font-family: 'Racing Sans One', cursive;*/
+	font-family: 'Bebas Neue', cursive;
+	font-size: 2rem;
 }
+
+
+
+h1 a {
+	/*color: sandybrown;*/
+}
+
 
 .navbar-brand {
 	font-size: 3rem;
@@ -51,7 +62,7 @@ a:hover {
 #landing-section {
 	height: 90vh;
 	width: 100vw;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(
 		'https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260'
 		/*'./images/landing.jpg'*/
 		);
@@ -68,6 +79,24 @@ a:hover {
 	font-size: 4rem;
 	padding-bottom: 0;
 	margin-bottom: 0;
+	color: white;
+}
+
+#landing-section h1 a{
+	color: sandybrown;
+}
+
+#landing-section h1 a:hover {
+	/*color: white;*/
+	text-decoration: line-through;
+	font-family: 'Comic Neue', cursive;
+}
+
+#landing-section a .btn {
+	/*color: white;*/
+	/*font-family: 'Bebas Neue', cursive;*/
+	/*font-family: 'Sorts Mill Goudy', serif;*/
+	/*font-family: 'Racing Sans One', cursive;*/
 }
 
 #comic-sans {
@@ -78,19 +107,87 @@ a:hover {
 }
 
 #intro-section img {
+	height: 175px;
+}
 
+#intro-section p{
+	font-size: 1.2rem;
 }
 
 #intro-section p span {
 	font-weight: bold;
-	color: sandybrown;
+	font-style: italic;
+	/*color: sandybrown;*/
+}
+
+#intro-section .fab {
+	font-size: 2rem;
+	color: darkgray;
 }
 
 #project-section {
-	background-color: #EFFAFB;
+	/*background-color: #DEF5F7;*/
+	background-color: #24292E;
+	/*font-size: 1.2rem;*/
 }
 
-footer a {
-	margin-left: 3rem;
-	margin-right: 3rem;
+
+#project-section h3{
+	/*font-family: 'Racing Sans One', cursive;*/
+	font-family: 'Bebas Neue', cursive;
+	font-size: 3rem;
 }
+
+#project-section a {
+	text-decoration: underline;
+}
+
+#project-section p span {
+	font-style: italic;
+}
+
+#node-img {
+	background-color: ghostwhite;
+}
+
+#mern-icon img {
+	width: 45px;
+}
+
+#imus-icon i{
+	font-size: 25px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+
+#tools-section img {
+	width: 80px;
+}
+
+
+#contact-section {
+	background-color: #D9D8D4;
+}
+
+#gmap_canvas {
+	width: 100%;
+	height: 40vh;
+}
+
+footer {
+	/*background-color: #F0AB56;*/
+	/*background-color: #777369;*/
+}
+
+#logo {
+	font-family: 'Shrikhand', cursive;
+	font-size: 2rem;
+}
+
+
+footer .fab {
+	font-size: 2rem;
+	color: darkgray;
+}
+
