--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@ h1 a {
 #project-section {
 	/*background-color: #DEF5F7;*/
 	background-color: #24292E;
-	/*font-size: 1.2rem;*/
+	font-size: 1.2rem;
 }
 
 
