--- a/index.css
+++ b/index.css
@@ -18,176 +18,176 @@ font-family: 'Sorts Mill Goudy', serif;
 */
 /*CSS Reset*/
 * {
-	padding: 0rem;
-	margin: 0rem;
-	box-sizing: border-box;
-	scroll-behavior: smooth;
+  padding: 0rem;
+  margin: 0rem;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 /*fonts*/
 body {
-	
-	font-family: 'Barlow', sans-serif;
-
+  font-family: "Barlow", sans-serif;
 }
 
-h1, h2{
-	font-family: 'Racing Sans One', sans-serif;
+h1,
+h2 {
+  font-family: "Racing Sans One", sans-serif;
 }
 
 h4 {
-	font-weight: bold;
+  font-weight: bold;
 }
 
-h3{
-	/*font-family: 'Racing Sans One', sans-serif;*/
-	font-family: 'Bebas Neue', sans-serif;
-	font-size: 2rem;
+h3 {
+  /*font-family: 'Racing Sans One', sans-serif;*/
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 2rem;
 }
 
-
-
-h1 a {
-	/*color: sandybrown;*/
-}
-
+/* h1 a {
+  color: sandybrown;
+} */
 
 .navbar-brand {
-	font-size: 3rem;
-	font-family: 'Shrikhand', sans-serif;
-	padding-bottom: 0;
-
+  font-size: 3rem;
+  font-family: "Shrikhand", sans-serif;
+  padding-bottom: 0;
 }
 
 #landing-section {
-	height: 90vh;
-	width: 100vw;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(
-		'https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260'
-		/*'./images/landing.jpg'*/
-		);
-	background-size: cover;
-	background-position: left;
-	background-repeat: no-repeat;
-	color: white;
-	
+  height: 90vh;
+  width: 100vw;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"/*'./images/landing.jpg'*/);
+  background-size: cover;
+  background-position: left;
+  background-repeat: no-repeat;
+  color: white;
 }
 
-
-#landing-section > div > h1 {
-	font-family: 'Racing Sans One', sans-serif;
-	font-size: 4rem;
-	padding-bottom: 0;
-	margin-bottom: 0;
-	color: white;
+#large-landing h1{
+  font-family: "Racing Sans One", sans-serif;
+  font-size: 4rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  color: white;
 }
 
-#landing-section h1 a{
-	color: sandybrown;
+#small-landing h1{
+  font-family: "Racing Sans One", sans-serif;
+  font-size: 3.5rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  color: white;
+}
+
+#landing-section h1 a {
+  color: sandybrown;
 }
 
 #landing-section h1 a:hover {
-	/*color: white;*/
-	text-decoration: line-through;
-	font-family: 'Comic Neue', sans-serif;
+  /*color: white;*/
+  text-decoration: line-through;
+  font-family: "Comic Neue", sans-serif;
 }
 
-#landing-section a .btn {
-	/*color: white;*/
-	/*font-family: 'Bebas Neue', sans-serif;*/
-	/*font-family: 'Sorts Mill Goudy', serif;*/
-	/*font-family: 'Racing Sans One', sans-serif;*/
-}
+/* #landing-section a .btn {
+  color: white;
+  font-family: 'Bebas Neue', sans-serif;
+  font-family: 'Sorts Mill Goudy', serif;
+  font-family: 'Racing Sans One', sans-serif;
+} */
 
-#comic-sans {
-	/*font-family: 'Comic Neue', sans-serif;*/
-	/*font-family: 'Racing Sans One', sans-serif;*/
-	/*text-decoration: line-through 3px;*/
-	/*color: powderblue;*/
-}
+/* #comic-sans {
+  font-family: 'Comic Neue', sans-serif;
+  font-family: 'Racing Sans One', sans-serif;
+  text-decoration: line-through 3px;
+  color: powderblue;
+} */
 
 #intro-section img {
-	height: 175px;
+  height: 175px;
 }
 
-#intro-section p{
-	font-size: 1.2rem;
+#intro-section p {
+  font-size: 1.2rem;
 }
 
 #intro-section p span {
-	font-weight: bold;
-	font-style: italic;
-	/*color: sandybrown;*/
+  font-weight: bold;
+  font-style: italic;
+  /*color: sandybrown;*/
 }
 
 #intro-section .fab {
-	font-size: 2rem;
-	color: darkgray;
+  font-size: 2rem;
+  /* color: darkgray; */
+  color: #F57C00;
 }
 
 #project-section {
-	/*background-color: #DEF5F7;*/
-	background-color: #24292E;
-	font-size: 1.2rem;
+  /*background-color: #DEF5F7;*/
+  background-color: #24292e;
+  font-size: 1.2rem;
 }
 
-
-#project-section h3{
-	/*font-family: 'Racing Sans One', sans-serif;*/
-	font-family: 'Bebas Neue', sans-serif;
-	font-size: 3rem;
+#project-section h3 {
+  /*font-family: 'Racing Sans One', sans-serif;*/
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 3rem;
 }
 
 #project-section a {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 #project-section p span {
-	font-style: italic;
+  font-style: italic;
 }
 
 #node-img {
-	background-color: ghostwhite;
+  background-color: ghostwhite;
 }
 
 #mern-icon img {
-	width: 45px;
+  width: 45px;
 }
 
-#imus-icon i{
-	font-size: 25px;
-	margin-left: 10px;
-	margin-right: 10px;
+#imus-icon i {
+  font-size: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-
 
 #tools-section img {
-	width: 80px;
+  width: 80px;
 }
 
-
 #contact-section {
-	background-color: #D9D8D4;
+  background-color: #d9d8d4;
+}
+
+#contact-section .fab {
+	color: #F57C00;
+	font-size: 2rem;
 }
 
 #gmap_canvas {
-	width: 100%;
-	height: 40vh;
+  width: 100%;
+  height: 60vh;
 }
 
-footer {
-	/*background-color: #F0AB56;*/
-	/*background-color: #777369;*/
-}
+/* footer {
+  background-color: #F0AB56;
+  background-color: #777369;
+} */
 
 #logo {
-	font-family: 'Shrikhand', sans-serif;
-	font-size: 2rem;
+  font-family: "Shrikhand", sans-serif;
+  font-size: 2rem;
 }
-
 
 footer .fab {
-	font-size: 2rem;
-	color: darkgray;
+  font-size: 2rem;
+  color: darkgray;
 }
-
