--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ h3 {
 #intro-section .fab {
   font-size: 2rem;
   /* color: darkgray; */
-  color: #F57C00;
+  color: #FFA000;
 }
 
 #project-section {
@@ -168,7 +168,7 @@ h3 {
 }
 
 #contact-section .fab {
-	color: #F57C00;
+	color: #FFA000;
 	font-size: 2rem;
 }
 
